variables.Variables.scala.error
Erreur de compilation :
Variables:12: error: not found: value defaFait
      defaFait = dejaFait + 1
      ^Variables:14: error: not found: value posBiscuit
    posBiscuit()
    ^