variables.Variables.scala.code
var nbPas:Int = 0
var dejaFait:Int = 0

while(!porteBiscuit){
  avance()
  nbPas = nbPas + 1
  
  if (estSurBiscuit()){
    prendBiscuit()
    while(nbPas != dejaFait){
    	recule()
      defaFait = dejaFait + 1
    }
    posBiscuit()
  }
}